--- a/pokemon.html
+++ b/pokemon.html
@@ -1,5 +1,6 @@
 <HTML><HEAD>
-<Title>Bookmarklet</Title>
+<Title>Pokemon Go Icons</Title>
+<meta http-equiv="refresh" content="2;url=bookmarklet.html?#javascript:for(var i=1;i<=251;i++){localStorage.setItem('icon'+i,'https://raw.githubusercontent.com/devsrc/pogo-sprites/master/sprites/clean/'+i+'.png');}">
 </HEAD>
 <BODY>
 <P>Baby.
