More reasonable instructions.

--- a/pokemon.html
+++ b/pokemon.html
@@ -1,11 +1,16 @@
 <HTML><HEAD>
-<Title>Pokemon Go Icons</Title>
+<Title>BostonPogoMap Icons</Title>
 <meta name="viewport" content="width=device-width">
 </HEAD>
 <BODY>
-<P>Baby.
-Bookmark
-<a href="bookmarklet.html?#javascript:for(var i=1;i<=251;i++){localStorage.setItem('icon'+i,'https://raw.githubusercontent.com/devsrc/pogo-sprites/master/sprites/clean/'+i+'.png');}">this page</a>
+<H2>Custom Icons for BostonPogoMap</H2>
+<P>
+BostonPogoMap.com is a great Pokémon Go map, but sadly, they were asked to remove the icons for the Pokémon. Fortunately you can get them back using a "bookmarklet" -- a bookmark that contains JavaScript to fix up the icons. The process is a little odd, so we'll go through it step by step.
 </P>
+
+<P>
+To get started, go to this <a href="bookmarklet.html?#javascript:for(var i=1;i<=251;i++){localStorage.setItem('icon'+i,'https://raw.githubusercontent.com/devsrc/pogo-sprites/master/sprites/clean/'+i+'.png');}">bookmarklet page</a> and bookmark it.
+</P>
+
 </BODY>
 </HTML>
