Very basic style.

--- a/pokemon.html
+++ b/pokemon.html
@@ -1,6 +1,9 @@
 <HTML><HEAD>
 <Title>BostonPogoMap Icons</Title>
 <meta name="viewport" content="width=device-width">
+<style type="text/css">
+font-family: sans-serif;
+</style>
 </HEAD>
 <BODY>
 <H2>Custom Icons for BostonPogoMap</H2>
