--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -1,9 +1,28 @@
 <HTML><HEAD>
-<Title>Bookmarklet</Title>
+<Title>BostonPogoMap Icons</Title>
+<meta name="viewport" content="width=device-width">
+<style type="text/css">
+font-family: sans-serif;
+</style>
 </HEAD>
 <BODY>
-<P>Baby.
-After bookmarking, edit the bookmark and get rid of the crap.
+<H2>Custom Icons for BostonPogoMap</H2>
+<P>
+Once you've created a bookmark to this page, you need to edit the bookmark: remove everything at the start of the bookmark's URL, up to and including the "?#". You'll be left with a URL that starts with "javascript:".</P>
+
+<P>
+Once you've edited your bookmark:
 </P>
+
+<OL>
+<LI>Go to <a href="http://bostonpogomap.com" target="blank">BostonPogoMap.com</a></LI>
+<LI>Open your bookmarks.</LI>
+<LI>Tap your BostonPogoMap Icons bookmark.</LI>
+</OL>
+
+<P>
+BostonPogoMap.com should reload, magically with the icons restored! If ever they vanish again, you should be able to repeat the three steps above to recover them.
+</P>
+
 </BODY>
 </HTML>
