--- a/pokemon.html
+++ b/pokemon.html
@@ -2,7 +2,7 @@
 <Title>BostonPogoMap Icons</Title>
 <meta name="viewport" content="width=device-width">
 <style type="text/css">
-font-family: sans-serif;
+body { font-family: sans-serif };
 </style>
 </HEAD>
 <BODY>
