--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -8,7 +8,24 @@ body { font-family: sans-serif };
 <BODY>
 <H2>Custom Icons for BostonPogoMap</H2>
 <P>
-Once you've created a bookmark to this page, you need to edit the bookmark: remove everything at the start of the bookmark's URL, up to and including the "?#". You'll be left with a URL that starts with "javascript:".</P>
+Once here, you need to bookmark this page:
+</P>
+
+<UL>
+<LI>On Safari, tap the Share icon, then "Add Bookmark".</LI>
+<LI>On Chrome, tap the three dots in the upper right, then the star.</LI>
+</UL>
+
+<P>
+Next, edit the bookmark:
+</P>
+
+<UL>
+<LI>On Safari, tap the Bookmark icon, then "Edit" in the lower right, then the BostonPogoMap Icons bookmark.</LI>
+<LI>On Chrome, tap the three dots in the upper right, then "Bookmarks", then the three dots to the right of the "BostonPogoMap Icons", then "Edit".</LI>
+</UL>
+
+<P>Remove everything at the start of the bookmark's URL, up to and including the "?#". You'll be left with a URL that starts with "javascript:".</P>
 
 <P>
 Once you've edited your bookmark:
