Switch to a lightly-filled graph for the count.

--- a/graph.html
+++ b/graph.html
@@ -220,9 +220,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 1, 4, 4, 7, 7, 8, 10, 10, 13, 13, 13, 14, 14, 17, 17, 19, 24, 24, 31, 31, 38, 38, 38, 39, 43, 48, 50, 58],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 1, 4, 4, 7, 7, 8, 10, 10, 13, 13, 13, 14, 14, 17, 17, 19, 24, 24, 31, 31, 38, 38, 38, 39, 43, 48, 50, 58],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -368,9 +368,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 2, 4, 4, 4, 3, 5, 7, 12, 16, 18, 24, 25, 30, 39, 50, 65, 81, 94, 110, 124, 146, 173, 199, 238, 265, 289, 348, 380, 432, 495, 544, 583, 605],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 2, 4, 4, 4, 3, 5, 7, 12, 16, 18, 24, 25, 30, 39, 50, 65, 81, 94, 110, 124, 146, 173, 199, 238, 265, 289, 348, 380, 432, 495, 544, 583, 605],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -516,9 +516,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 1, 4, 5, 8, 9, 12, 19, 21, 25, 26, 30, 38, 54, 61, 64, 80, 101, 109, 139, 179, 218, 259, 339, 375, 407, 503, 557, 654],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 1, 4, 5, 8, 9, 12, 19, 21, 25, 26, 30, 38, 54, 61, 64, 80, 101, 109, 139, 179, 218, 259, 339, 375, 407, 503, 557, 654],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -664,9 +664,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 4, 5, 6, 6, 7, 7, 7, 7, 7, 9, 10],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 4, 5, 6, 6, 7, 7, 7, 7, 7, 9, 10],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -812,9 +812,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 3, 3, 4, 5, 9, 9, 9, 12, 15, 21, 22, 24, 22, 27, 32, 38, 47],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 3, 3, 4, 5, 9, 9, 9, 12, 15, 21, 22, 24, 22, 27, 32, 38, 47],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -960,9 +960,9 @@
                         label: 'Total deaths',
                         data: [34, 52, 79, 107, 148, 197, 233, 366, 463, 631, 827, 827, 1266, 1441, 1809, 2158, 2503, 2978, 3405, 4032, 4825, 5476, 6077, 6820, 7503, 8215, 9134, 10023, 10779, 11591, 12428, 13155, 13915, 14681, 15362, 15887, 16523, 17127, 17669, 18279, 18849, 19468],
                         rawData: [34, 52, 79, 107, 148, 197, 233, 366, 463, 631, 827, 827, 1266, 1441, 1809, 2158, 2503, 2978, 3405, 4032, 4825, 5476, 6077, 6820, 7503, 8215, 9134, 10023, 10779, 11591, 12428, 13155, 13915, 14681, 15362, 15887, 16523, 17127, 17669, 18279, 18849, 19468],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -1108,9 +1108,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 1, 1, 2, 2, 2, 5, 7, 11, 13, 21, 26, 26, 32, 44, 54, 64, 78, 89, 93, 132, 147, 169, 198, 223, 242, 244],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 1, 1, 2, 2, 2, 5, 7, 11, 13, 21, 26, 26, 32, 44, 54, 64, 78, 89, 93, 132, 147, 169, 198, 223, 242, 244],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -1271,9 +1271,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 25, 35, 44, 48, 56, 89, 122, 154, 192, 216, 231, 260, 356, 433, 503, 599, 686],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 25, 35, 44, 48, 56, 89, 122, 154, 192, 216, 231, 260, 356, 433, 503, 599, 686],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -1419,9 +1419,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 5, 6, 8, 17, 20, 28, 38, 38, 41, 47, 68, 80, 80, 80, 137],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 5, 6, 8, 17, 20, 28, 38, 38, 41, 47, 68, 80, 80, 80, 137],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -1567,9 +1567,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 46, 60, 117, 158, 210, 285, 385, 527, 883, 1063, 1342, 1714, 2176, 2738, 3594, 4290, 4951, 4698, 5489, 6268, 7067, 7867, 8627],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 46, 60, 117, 158, 210, 285, 385, 527, 883, 1063, 1342, 1714, 2176, 2738, 3594, 4290, 4951, 4698, 5489, 6268, 7067, 7867, 8627],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -1715,9 +1715,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 29, 45, 63, 99, 131, 199, 281, 366, 672, 776, 914, 1096, 1374, 1762, 2243, 2630, 3048, 3485, 4009, 4571, 5150, 5820, 6367],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 29, 45, 63, 99, 131, 199, 281, 366, 672, 776, 914, 1096, 1374, 1762, 2243, 2630, 3048, 3485, 4009, 4571, 5150, 5820, 6367],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -1863,9 +1863,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 6, 7, 7, 7, 8, 8, 9, 9, 10, 10, 13, 13],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 6, 7, 7, 7, 8, 8, 9, 9, 10, 10, 13, 13],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -2011,9 +2011,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 2, 4, 6, 6, 8, 8, 8, 10, 16, 17, 19, 20, 25, 25, 28, 30, 32, 36, 36, 39, 39, 39, 43, 46, 46, 47, 50],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 2, 4, 6, 6, 8, 8, 8, 10, 16, 17, 19, 20, 25, 25, 28, 30, 32, 36, 36, 39, 39, 39, 43, 46, 46, 47, 50],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -2159,9 +2159,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 28, 35, 54, 55, 133, 195, 289, 342, 533, 623, 830, 1043, 1375, 1772, 2311, 2808, 3647, 4365, 5138, 5982, 6803, 7716, 8464, 9387, 10348, 11198, 11947, 12641, 13341, 14045, 14792, 15447, 16081, 16606],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 28, 35, 54, 55, 133, 195, 289, 342, 533, 623, 830, 1043, 1375, 1772, 2311, 2808, 3647, 4365, 5138, 5982, 6803, 7716, 8464, 9387, 10348, 11198, 11947, 12641, 13341, 14045, 14792, 15447, 16081, 16606],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -2307,9 +2307,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 2, 2, 3, 3, 5, 6, 13, 19, 21, 26, 27, 31, 40, 48, 48, 48, 79],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 2, 2, 3, 3, 5, 6, 13, 19, 21, 26, 27, 31, 40, 48, 48, 48, 79],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -2455,9 +2455,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 9, 12, 15, 21, 26, 30, 37, 45, 54, 66, 77, 100, 116, 136, 150, 160, 189, 210, 238, 266],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 9, 12, 15, 21, 26, 30, 37, 45, 54, 66, 77, 100, 116, 136, 150, 160, 189, 210, 238, 266],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -2603,9 +2603,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, 14, 17, 21, 22, 28, 36, 40, 47, 54, 63, 85, 108, 118, 200, 244, 307, 417, 557, 706, 942, 1209, 1581, 2026, 2467, 2978, 3873, 4757, 5926, 7087, 8407, 9619, 10783, 12722, 14695, 16478, 18586, 20463],
                         rawData: [NaN, NaN, NaN, NaN, NaN, 14, 17, 21, 22, 28, 36, 40, 47, 54, 63, 85, 108, 118, 200, 244, 307, 417, 557, 706, 942, 1209, 1581, 2026, 2467, 2978, 3873, 4757, 5926, 7087, 8407, 9619, 10783, 12722, 14695, 16478, 18586, 20463],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
@@ -2751,9 +2751,9 @@
                         label: 'Total deaths',
                         data: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 8, 8, 8, 21, 21, 55, 55, 71, 137, 177, 233, 281, 335, 422, 465, 578, 759, 1019, 1228, 1408, 1789, 2352, 2921, 3605, 4313, 4934, 5373, 6159, 7097, 7978, 8958, 9875],
                         rawData: [NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, NaN, 8, 8, 8, 21, 21, 55, 55, 71, 137, 177, 233, 281, 335, 422, 465, 578, 759, 1019, 1228, 1408, 1789, 2352, 2921, 3605, 4313, 4934, 5373, 6159, 7097, 7978, 8958, 9875],
-                        backgroundColor: 'rgb(201, 203, 207)',
-                        borderColor: 'rgb(201, 203, 207)',
-                        fill: false,
+                        backgroundColor: 'rgb(240, 240, 240)',
+                        borderColor: 'rgb(240, 240, 240)',
+                        fill: true,
                         spanGaps: false,
                         yAxisID: "count-axis"
                     }
