Add "scroll past the text" bit up top.

--- a/intro.html
+++ b/intro.html
@@ -3,6 +3,12 @@
 
   <hr/>
 
+  <div style="max-width: 45em; font-size: 1.0rem;">
+    <p></p><em>(Just want the graphs? <a style="text-decoration: none" href="#graphs">Scroll past the text.</a>)</em></p>
+  </div>
+
+  <hr/>
+
   <div style="max-width: 45em;">
     <p>
         I see a lot of graphs of cumulative COVID-19 cases over time. While they definitely 
@@ -61,5 +67,5 @@
     </p>
   </div>
 
-  <hr/>
+  <a name="graphs"><hr/></a>
 
