--- a/graph.html
+++ b/graph.html
@@ -79,6 +79,10 @@
             which is updated daily.</li>
         <li>Massachusetts hospitalization data is from <a style="text-decoration: none" href="https://www.mass.gov/info-details/covid-19-cases-quarantine-and-monitoring">ma.gov</a>,
             also updated daily.</li>
+        <li>Massachusetts had a nasty hiccup reporting data to Johns Hopkins on 13 and 14 April. I've
+            backfilled as best I can.</li>
+        <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, so the Middlesex
+            and Suffolk graphs will start showing rates for hospitalizations on 21 April 2020.</li>
         <li>I would love hospitalization data for other regions, but I don't have it.</li>
       </ul>
     </p>
