Graph as of CSSE commit 6c4ac9ee9b9a16486bc06807491377b5b96aa1e8

--- a/intro.html
+++ b/intro.html
@@ -61,9 +61,9 @@
         <li>The primary data source is the <a style="text-decoration: none" href="https://github.com/CSSEGISandData/COVID-19">Johns Hopkins CSSE data</a>, 
             which is updated daily.</li>
         <li>Massachusetts hospitalization data is from <a style="text-decoration: none" href="https://www.mass.gov/info-details/covid-19-cases-quarantine-and-monitoring">ma.gov</a>,
-            also updated daily.</li>
-        <li>Massachusetts had a nasty hiccup reporting data to Johns Hopkins on 13 and 14 April. I've
-            backfilled as best I can.</li>
+            apparently updated daily, but not always on weekends.</li>
+        <li>Massachusetts and Johns Hopkins either don't have a proper data channel, or possibly John Hopkins
+            lags Massachusetts by a day? I'm keeping an eye on this, and will comment here as I learn more.</li>
         <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, so the Middlesex
             and Suffolk graphs will start showing rates for hospitalizations on 21 April 2020.</li>
         <li>I would love hospitalization data for other regions, but I don't have it.</li>
