Graph as of CSSE commit ca11cb6e451fa5f4c89e063accc9a7a3b0b6e3e6

--- a/intro.html
+++ b/intro.html
@@ -60,12 +60,18 @@
         <li>No point will be plotted if the number was constant over the whole seven-day window.</li>
         <li>The primary data source is the <a style="text-decoration: none" href="https://github.com/CSSEGISandData/COVID-19">Johns Hopkins CSSE data</a>, 
             which is updated daily.</li>
-        <li>Massachusetts hospitalization data is from <a style="text-decoration: none" href="https://www.mass.gov/info-details/covid-19-cases-quarantine-and-monitoring">ma.gov</a>,
-            apparently updated daily, but not always on weekends.</li>
+        <li>Massachusetts hospitalization data is from <a style="text-decoration: none" href="https://www.mass.gov/info-details/covid-19-cases-quarantine-and-monitoring">ma.gov</a>.</li>
         <li>Massachusetts and Johns Hopkins either don't have a proper data channel, or possibly John Hopkins
-            lags Massachusetts by a day? I'm keeping an eye on this, and will comment here as I learn more.</li>
-        <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, so the Middlesex
-            and Suffolk graphs will start showing rates for hospitalizations on 21 April 2020.</li>
+            lags Massachusetts by a day? I've reached out to the Massachusetts Department of Health about this,
+            and will comment here as I learn more.</li>
+        <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, but the first week
+            has been... really tough to be sure of the data quality. The Middlesex
+            and Suffolk graphs started showing rates for hospitalizations on 20 April 2020; I'll comment here
+            as I learn more about data quality.</li>
+        <li>In particular, the bump in Massachusetts hospitalizations was badly overstated from 14 to 19 April
+            might not be real. I fixed it on 20 April, and am still looking into how real it is. The sharp drop
+            on 20 April looks much more likely to be real -- hospitalizations slowed a lot over the weekend
+            of 18-19 April. The question is whether they'll continue dropping.</li>
         <li>I would love hospitalization data for other regions, but I don't have it.</li>
       </ul>
     </p>
