--- a/intro.html
+++ b/intro.html
@@ -64,14 +64,17 @@
         <li>Massachusetts and Johns Hopkins either don't have a proper data channel, or possibly John Hopkins
             lags Massachusetts by a day? I've reached out to the Massachusetts Department of Health about this,
             and will comment here as I learn more.</li>
+        <li>Before 13 April 2020, Massachusetts reported only confirmed cases in the hospitalization counts.
+            On 13 April 2020, they started including presumed positive COVID patients as well. This manifests
+            as a significant jump in the graphs.</li>
+        <li>Massachusetts quietly restated their hospitalization counts when they released their new dashboard
+            on 20 April 2020. The numbers graphed for Massachusetts reflect the restating.</li>
         <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, but the first week
-            has been... really tough to be sure of the data quality. The Middlesex
-            and Suffolk graphs started showing rates for hospitalizations on 20 April 2020; I'll comment here
-            as I learn more about data quality.</li>
-        <li>In particular, the bump in Massachusetts hospitalizations was badly overstated from 14 to 19 April
-            might not be real. I fixed it on 20 April, and am still looking into how real it is. The sharp drop
-            on 20 April looks much more likely to be real -- hospitalizations slowed a lot over the weekend
-            of 18-19 April. The question is whether they'll continue dropping.</li>
+            has been really tough to be sure of the data quality. In particular, Middlesex and Suffolk data for
+            17 and 18 April are missing entirely.</li>
+        <li>The sharp drop in Massachusetts hospitalizations on 20 April is surreal, but so far looks real based
+            on other information I have from Partners Health -- anecdotally, their hospitalizations slowed a lot
+            over the weekend of 18-19 April. I'm still keeping an eye on that.</li>
         <li>I would love hospitalization data for other regions, but I don't have it.</li>
       </ul>
     </p>
