--- a/intro.html
+++ b/intro.html
@@ -65,8 +65,8 @@
             lags Massachusetts by a day? I've reached out to the Massachusetts Department of Health about this,
             and will comment here as I learn more.</li>
         <li>Before 13 April 2020, Massachusetts reported only confirmed cases in the hospitalization counts.
-            On 13 April 2020, they started including presumed positive COVID patients as well. This manifests
-            as a significant jump in the graphs.</li>
+            On 13 April 2020, they started including presumed positive COVID patients as well. New York City 
+            did the same on 16 April 2020. These changes manifest as significant jumps in the graphs.</li>
         <li>Massachusetts quietly restated their hospitalization counts when they released their new dashboard
             on 20 April 2020. The numbers graphed for Massachusetts reflect the restating.</li>
         <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, but the first week
