Update intro with some data-quality edits.

--- a/intro.html
+++ b/intro.html
@@ -61,16 +61,14 @@
         <li>The primary data source is the <a style="text-decoration: none" href="https://github.com/CSSEGISandData/COVID-19">Johns Hopkins CSSE data</a>, 
             which is updated daily.</li>
         <li>Massachusetts hospitalization data is from <a style="text-decoration: none" href="https://www.mass.gov/info-details/covid-19-cases-quarantine-and-monitoring">ma.gov</a>.</li>
-        <li>Massachusetts and Johns Hopkins either don't have a proper data channel, or possibly John Hopkins
-            lags Massachusetts by a day? I've reached out to the Massachusetts Department of Health about this,
-            and will comment here as I learn more.</li>
+        <li>Massachusetts and Johns Hopkins seem to have a stable data feed (again?) as of about 1 May 2020. Whew.</li>
         <li>Before 13 April 2020, Massachusetts reported only confirmed cases in the hospitalization counts.
             On 13 April 2020, they started including presumed positive COVID patients as well. New York City 
             did the same on 16 April 2020. These changes manifest as significant jumps in the graphs.</li>
         <li>Massachusetts quietly restated their hospitalization counts when they released their new dashboard
             on 20 April 2020. The numbers graphed for Massachusetts reflect the restating.</li>
-        <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020, but the first week
-            has been really tough to be sure of the data quality. In particular, Middlesex and Suffolk data for
+        <li>Massachusetts started reporting hospitalizations by county as of 14 April 2020. Data quality for 
+            the first week was pretty weird -- in particular, Middlesex and Suffolk data for 
             17 and 18 April are missing entirely.</li>
         <li>The sharp drop in Massachusetts hospitalizations on 20 April is surreal, but so far looks real based
             on other information I have from Partners Health -- anecdotally, their hospitalizations slowed a lot
