Be www.kodachi.com for now

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Redirecting to http://jekyll.kodachi.com/graph.html</title>
-    <meta http-equiv="refresh" content="0; URL=http://jekyll.kodachi.com/graph.html">
+    <title>kodachi 6&bull;14, llc</title>
   </head>
 
-  <!-- <link rel="canonical" href="https://example.com"> -->
+  <body>
+    <h2>kodachi 6&bull;14, llc</h2>
+
+    <p>
+      If you're hunting for anything useful, your best bet is to
+      <a href="mailto:flynn+www@kodachi.com">email Flynn</a>.
+    </p>
+
+    <p>
+      You might also find it of possible historical interest to see
+      some <a href="graph.html">COVID-19 graphs</a> which, at the moment,
+      are not being updated.
+    </p>
+  </body>
 </html>
