--- a/instruqt/t3-iframe.html
+++ b/instruqt/t3-iframe.html
@@ -3,6 +3,6 @@
     <p>Iframe below</p>
     <iframe width="1280px" height="720px" style="border: 0;" allowfullscreen
     sandbox="allow-forms allow-modals allow-popups allow-same-origin allow-scripts"
-    src="https://play.instruqt.com/embed/buoyant/tracks/track-t3?token=em_ETLuLd7gy2rjFXhg&icp_hsid=30173450905&finish_btn_target=_self&finish_btn_text=Get+Certified%21&finish_btn_url=https%3A%2F%2Fwww.kodachi.com2Finstruqt%2Fffs-3.html%3Ficp_hsid%3D30173450905">
+    src="https://play.instruqt.com/embed/buoyant/tracks/track-t3?token=em_ETLuLd7gy2rjFXhg&icp_hsid=30173450905&finish_btn_target=_self&finish_btn_text=Get+Certified%21&finish_btn_url=https%3A%2F%2Fwww.kodachi.com%2Finstruqt%2Fffs-3.html%3Ficp_hsid%3D30173450905">
 </iframe>
 </body>
