--- a/instruqt/t3.html
+++ b/instruqt/t3.html
@@ -1,4 +1,4 @@
 <html><head><title>Track 3</title></head>
 <body>
-    <p><a href="https://play.instruqt.com/embed/buoyant/tracks/track-t3?token=em_ETLuLd7gy2rjFXhg&icp_hsid=30173450905&finish_btn_target=_self&finish_btn_text=Get+Certified%21&finish_btn_url=https%3A%2F%2Fwww.kodachi.com%2Finstruqt%2Fffs-3.html%3Ficp_hsid%3D30173450905">Start your course!</a></p>
+    <p><a href="https://play.instruqt.com/embed/buoyant/tracks/track-t3?token=em_ETLuLd7gy2rjFXhg&icp_hsid=30173450905&icp_name=Flynn&finish_btn_target=_self&finish_btn_text=Get+Certified%21&finish_btn_url=https%3A%2F%2Fwww.kodachi.com%2Finstruqt%2Fffs-3.html%3Ficp_hsid%3D30173450905%3Ficp_name%3DFlynn">Start your course!</a></p>
 </body>
