Update with cookies

--- a/instruqt/sm101.html
+++ b/instruqt/sm101.html
@@ -1,8 +1,15 @@
-<html><head><title>Track 3 (iframe)</title></head>
-<body>
-    <p>Iframe below</p>
-    <iframe width="1280px" height="720px" style="border: 0;" allowfullscreen
-    sandbox="allow-forms allow-modals allow-popups allow-same-origin allow-scripts"
-    src="https://play.instruqt.com/embed/buoyant/tracks/service-mesh-101?token=em_W7Qsywv0f6c8eTzk&icp_hsid=30173450905&icp_name=Flynn&finish_btn_target=_self&finish_btn_text=Get+Certified%21&finish_btn_url=https%3A%2F%2Fwww.kodachi.com%2Finstruqt%2Fffs-3.html%3Ficp_hsid%3D30173450905%26icp_name%3DFlynn">
-</iframe>
-</body>
+<html>
+    <head>
+        <title>Service Mesh 101</title>
+        <script src="i6t.js"></script>
+    </head>
+    <body>
+        <h1>Welcome!</h1>
+
+        <div id="body">
+            <div id="i6t-banner"><h2>Loading...</h2></div>
+            <div id="i6t-main"></div>
+            <button id="i6t-action" style="display:none;"></button>
+        </div>
+    </body>
+</html>
